# waltham_etl

./: .gitignore  config.default.json  constants.py  data.dvc  docker-compose.yml  get_census_data.py  get_gis_layers.py  get_roads_data.ipynb  massgis_api.py  pyproject.toml  readme.md
.dvc/: config
data/: README.md
data/census/: .gitignore  data_profiles_census_df.csv.dvc  decennial_census_df.csv.dvc  subject_census_df.csv.dvc
data/gis/: .gitignore  CENSUS2020_BLK_BG_TRCT.zip.dvc  L3_SHP_M026_BELMONT.zip.dvc  L3_SHP_M155_LEXINGTON.zip.dvc  L3_SHP_M157_LINCOLN.zip.dvc  L3_SHP_M207_NEWTON.zip.dvc  L3_SHP_M308_WALTHAM.zip.dvc  L3_SHP_M314_WATERTOWN.zip.dvc  L3_SHP_M333_WESTON.zip.dvc  M026_parcels_gdb.zip.dvc  M155_parcels_gdb.zip.dvc  M157_parcels_gdb.zip.dvc  M207_parcels_gdb.zip.dvc  M308_parcels_gdb.zip.dvc  M314_parcels_gdb.zip.dvc  M333_parcels_gdb.zip.dvc  WalthamZoning.zip.dvc  readme.md  wardsprecincts2022_poly.zip.dvc
data/mbta_communities/: .gitignore  308_WALTHAM_detail.zip.dvc  Transit_Station_Areas_Half_Mile_Radius.zip.dvc
