[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Timothy Riley", email = "timothyjohnriley@gmail.com"},
]
dependencies = [
    "census>=0.8.19",
    "pandas>=1.5.3",
    "tqdm>=4.64.1",
    "sqlalchemy>=2.0.32",
    "psycopg2>=2.9.9",
]
requires-python = ">=3.11"
license = {text = "MIT"}
